--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-scikit-learn
-accelerate
-transformers
-datasets
-scipy
-evaluate
+scikit-learn==1.2.2
+accelerate==1.18.0
+transformers==4.28.1
+datasets==2.11.0
+scipy==1.10.1
+evaluate==0.4.0
+wandb==0.15.0
+tensorboard==2.12.2
+torch==2.0.0
+huggingface-hub==0.14.1
+datasketch==1.5.7
+dpu_utils==0.6.1
