--- a/bf16.yml
+++ b/bf16.yml
@@ -1,6 +1,6 @@
 compute_environment: LOCAL_MACHINE
 deepspeed_config: {}
-distributed_type: 'NO'
+distributed_type: 'MULTI_GPU'
 downcast_bf16: 'no'
 fsdp_config: {}
 machine_rank: 0
@@ -9,5 +9,5 @@ main_process_port: null
 main_training_function: main
 mixed_precision: 'bf16'
 num_machines: 1
-num_processes: 1
+num_processes: 2
 use_cpu: false
