--- a/baseline.yml
+++ b/baseline.yml
@@ -1,6 +1,6 @@
 compute_environment: LOCAL_MACHINE
 deepspeed_config: {}
-distributed_type: 'NO'
+distributed_type: 'MULTI_GPU'
 downcast_bf16: 'no'
 fsdp_config: {}
 machine_rank: 0
