--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 scikit-learn==1.2.2
-accelerate==0.18.0
+accelerate
 transformers==4.28.1
 datasets==2.11.0
 scipy==1.10.1
@@ -10,3 +10,4 @@ torch==2.0.0
 huggingface-hub==0.14.1
 datasketch==1.5.7
 dpu_utils==0.6.1
+nltk==3.8.1
